Riprogettazione per problemi: 4 - 5 - 6 - 8 - 9

--- a/progettoiseo/pagine_statiche/templates/home.html
+++ b/progettoiseo/pagine_statiche/templates/home.html
@@ -71,7 +71,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container pb-5  ">
     <div class="row g-4">
         <!-- Sezione Ultimi Articoli -->
         <div class="col-12 col-md-6">
@@ -184,18 +184,6 @@
                 <div class="text-center mt-3">
                     <a href="{% url 'lista_eventi' %}" class="btn btn-success">Vedi tutti gli eventi</a>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Sezione CTA finale -->
-<div class="container-fluid bg-light py-5 mt-5">
-    <div class="container">
-        <div class="row justify-content-center text-center">
-            <div class="col-lg-8">
-                <p class="text-muted mb-4">Sito web realizzato con Django e Bootstrap</p>
-                <a href="https://github.com/esaedro/sito_progettoiseo" class="btn btn-primary btn-lg"><i class="fab fa-github"></i> Codice sorgente</a>
             </div>
         </div>
     </div>
