--- a/progettoiseo/accounts/templates/registration/login.html
+++ b/progettoiseo/accounts/templates/registration/login.html
@@ -57,6 +57,9 @@
                                 {{ form.password.label }}
                             </label>
                             {{ form.password }}
+                            <small class="form-text text-muted">L'account è riservato a membri tesserari. Per
+                                diventare tesserato contattaci traimte: <a class="dropdown-item py-2 px-3" href="/home/contatti">
+                                    <i class="fas fa-envelope me-2"></i>Contatti</a> </small>
                             {% if form.password.errors %}
                                 <div class="text-danger">{{ form.password.errors }}</div>
                             {% endif %}
