--- a/progettoiseo/pagine_statiche/templates/contatti.html
+++ b/progettoiseo/pagine_statiche/templates/contatti.html
@@ -109,7 +109,17 @@
             </div>
         </div>
     </div>
-
+    <!-- Sezione CTA finale -->
+    <div class="container-fluid bg-light py-5 mt-5">
+        <div class="container">
+            <div class="row justify-content-center text-center">
+                <div class="col-lg-8">
+                    <p class="text-muted mb-4">Sito web realizzato con Django e Bootstrap</p>
+                    <a href="https://github.com/esaedro/sito_progettoiseo" class="btn btn-primary btn-lg"><i class="fab fa-github"></i> Codice sorgente</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Sezione aggiuntiva con orari o info -->
     <!-- <div class="row justify-content-center mt-4">
         <div class="col-md-8">
