--- a/progettoiseo/articoli/templates/article_detail.html
+++ b/progettoiseo/articoli/templates/article_detail.html
@@ -282,7 +282,7 @@ document.addEventListener('DOMContentLoaded', function() {
     margin-bottom: 1.5rem;
 }
 
-/* .article-text a {
+.article-text a {
     color: #0b3d91; 
     text-decoration: underline;
     text-decoration-thickness: 1.2px;
@@ -292,7 +292,7 @@ document.addEventListener('DOMContentLoaded', function() {
 .article-text a:hover,
 .article-text a:focus {
     color: #062a63;
-} */
+}
 
 .article-text h1, .article-text h2, .article-text h3 {
     margin-top: 2rem;
