--- a/progettoiseo/articoli/templates/article_form.html
+++ b/progettoiseo/articoli/templates/article_form.html
@@ -64,8 +64,9 @@
 
         <!-- Tag -->
         <div class="mb-3">
-          <label for="{{ form.tag.id_for_label }}" class="form-label">
-            <strong>Tag (si scrivono con #)</strong>
+          <label class="form-label d-flex justify-content-between align-items-end w-100">
+            <strong>Tag <span class="required-asterisk" aria-hidden="true">*</span></strong>
+            <small class="text-muted">Sono identificati dal carattere '#', Esempio: #Lago d'Iseo #Clusane</small>
           </label>
           {% if form.tag.errors %}
             <div class="text-danger mb-2">
@@ -83,8 +84,9 @@
 
         <!-- Immagine -->
         <div class="mb-3">
-          <label class="form-label">
-            <strong>Immagine</strong>
+          <label class="form-label d-flex justify-content-between align-items-end w-100">
+            <strong>Immagine <span class="required-asterisk" aria-hidden="true">*</span></strong>
+            <small class="text-muted">(È possibile caricare una sola immagine per articolo)</small>
           </label>
           {% if form.immagine.errors %}
             <div class="text-danger mb-2">
@@ -118,8 +120,9 @@
 
         <!-- Testo -->
         <div class="mb-4">
-          <label for="{{ form.testo.id_for_label }}" class="form-label">
+          <label class="form-label d-flex justify-content-between align-items-end w-100">
             <strong>Testo <span class="required-asterisk" aria-hidden="true">*</span></strong>
+            <small class="text-muted">(È possibile formattare il testo e creare elenchi puntati. I link vengono resi cliccabili, colorati e sottolineati in automatico)</small>
           </label>
           {% if form.testo.errors %}
             <div class="text-danger mb-2">
@@ -135,7 +138,7 @@
 
           {# Editor WYSIWYG #}
           <div id="testo-editor" class="bg-white"></div>
-          <div class="form-text">Usa la toolbar per grassetto e sottolineato.</div>
+          <!-- <div class="form-text">Usa la toolbar per grassetto e sottolineato.</div> -->
         </div>
       </div>
 
