Correzione typo e link contatti nel login

--- a/progettoiseo/accounts/templates/registration/login.html
+++ b/progettoiseo/accounts/templates/registration/login.html
@@ -61,7 +61,7 @@
                             </label>
                             {{ form.password }}
                             <small class="form-text text-muted">L'account è riservato a membri tesserati. Per
-                                diventare tesserato contattaci tramite: <a class="dropdown-item py-2 px-3" href="/home/contatti">
+                                diventare tesserato contattaci tramite: <a class=" border-light border dropdown-item rounded py-2 px-3 " href="/home/contatti">
                                     <i class="fas fa-envelope me-2"></i>Contatti</a> </small>
                             {% if form.password.errors %}
                                 <div class="text-danger">{{ form.password.errors }}</div>
