--- a/progettoiseo/eventi/templates/lista_eventi.html
+++ b/progettoiseo/eventi/templates/lista_eventi.html
@@ -146,9 +146,9 @@
                         {% else %}
                             Non ci sono eventi disponibili al momento.
                         {% endif %}</h3>
-                    <p class="text-muted">
+                    <!-- <p class="text-muted">
                         Non ci sono eventi disponibili al momento.
-                    </p>
+                    </p> -->
                 </div>
             </div>
         {% endfor %}
