--- a/progettoiseo/articoli/templates/article_form.html
+++ b/progettoiseo/articoli/templates/article_form.html
@@ -65,7 +65,7 @@
         <!-- Tag -->
         <div class="mb-3">
           <label class="form-label d-flex justify-content-between align-items-end w-100">
-            <strong>Tag <span class="required-asterisk" aria-hidden="true">*</span></strong>
+            <strong>Tag </strong>
             <small class="text-muted">Sono identificati dal carattere '#', Esempio: #Lago d'Iseo #Clusane</small>
           </label>
           {% if form.tag.errors %}
